--- a/@pages/cases-list.css
+++ b/@pages/cases-list.css
@@ -110,7 +110,7 @@ body {
 .hits-info>h3 {
     font-size: 16.5px;
     font-weight: 700;
-    color: #1A2250;
+    color: #ffffff;
 }
 
 .limited-container {
